@@ -219,7 +219,10 @@ mini-commander/src/mini-commander_applet.c
 mini-commander/src/preferences.c
 mixer/GNOME_MixerApplet.server.in.in
 mixer/GNOME_MixerApplet.xml
-mixer/mixer.c
+mixer/applet.c
+mixer/dock.c
+mixer/load.c
+mixer/preferences.c
 mixer/mixer.schemas.in
 modemlights/GNOME_ModemLightsApplet.server.in.in
 modemlights/GNOME_ModemlightsApplet.xml
