@@ -1,3 +1,7 @@
+2004-09-21  Michiel Sikkes  <michiel@eyesopened.nl>
+
+	* POTFILES.in: Removed old mixer source files, added the new ones.
+
 2004-09-15  Arafat Medini  <lumina@silverpen.de>
 
 	* ar.po: Updated Arabic translation.
